--- a/index.html
+++ b/index.html
@@ -5,8 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=git init, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="accrodin.js">
+    <script src="https://kit.fontawesome.com/2b8a6b154c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="accordian">
+  	  <div class="card">
+  	  	  <div class="card-header">
+  	  	  	 <h3 class="accrotian-title">Heading One </h3>
+  	  	  	 <!-- <span class="fa fa-minus"></span> -->
+  	  	  </div>
+  	  	  <div class="card-body">
+  	  	  	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  	  	  </div>
+  	  </div>
+
+  	  <div class="card">
+  	  	  <div class="card-header">
+  	  	  	 <h3 class="accrotian-title">Heading Two </h3>
+  	  	  	 <!-- <span class="fa fa-plus"></span> -->
+  	  	  </div>
+  	  	  <div class="card-body">
+  	  	  	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  	  	  </div>
+  	  </div>
+  	  <div class="card">
+  	  	  <div class="card-header">
+  	  	  	 <h3 class="accrotian-title">Heading Three </h3>
+  	  	  	 <!-- <span class="fa fa-plus"></span> -->
+  	  	  </div>
+  	  	  <div class="card-body">
+  	  	  	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  	  	  </div>
+  	  </div>
+
+        <div class="card">
+            <div class="card-header">
+                 <h3 class="accrotian-title">Heading Four </h3>
+                 <!-- <span class="fa fa-minus"></span> -->
+            </div>
+            <div class="card-body">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
+      </div>
+        <div class="card">
+            <div class="card-header">
+                 <h3 class="accrotian-title">Heading Five </h3>
+                 <!-- <span class="fa fa-minus"></span> -->
+            </div>
+            <div class="card-body">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
+      </div>
+
+  </div>
+  </div>
+
+
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>
+	$(document).ready(function(){
+	  $(".card-header").click(function(){
+       // self clicking close
+       if($(this).next(".card-body").hasClass("close-open")){
+         $(this).next(".card-body").removeClass("close-open").slideUp()
+        $(this).children("span").removeClass("fa-minus").addClass("fa-plus")	
+       }
+     else{
+	   $(".card .card-body").removeClass("close-open").slideUp()
+	   $(".card .card-header span").removeClass("fa-minus").addClass("fa-plus");
+       $(this).next(".card-body").addClass("close-open").slideDown()
+        $(this).children("span").removeClass("fa-plus").addClass("fa-minus")
+      }
+	  })
+	}) -->
+
+    <script>
+    const accrodin = document.getElementsByClassName('card');
+
+    for(i = 0; i<accrodin.length; i++){
+    accrodin[i].addEventListener('click' , function(){this.classList.toggle('open-close')})
+    }
+    </script>
+
+</script> 
 </body>
 </html>
